--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.1",
+    "react-image-zooom": "^1.1.0",
+    "react-img-zoom": "^0.1.0",
+    "react-medium-image-zoom": "^5.1.3",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
     "typewriter-effect": "^2.19.0",
