--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.2",
+    "hamburger-react": "^2.5.0",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -15,6 +16,7 @@
     "react-image-zooom": "^1.1.0",
     "react-img-zoom": "^0.1.0",
     "react-medium-image-zoom": "^5.1.3",
+    "react-pdf": "^6.2.2",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
     "typewriter-effect": "^2.19.0",
